fix font-size of input field & button so placeholder text doesn't get cut off in mobile view

--- a/src/components/css/Button.css
+++ b/src/components/css/Button.css
@@ -3,8 +3,8 @@
     background: #955F00;
     border: unset;
     border-radius: 50px;
-    font-size: 1.4rem;
-    padding: 0.6em 1.5em;
+    font-size: 1.3rem;
+    padding: 0.5em 1.5em;
     margin-bottom: 2em;
     color: #FBFFF8;
     text-transform: uppercase;
